# pasync

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
pasync/: __init__.py  event_loop.py  task.py
pasync/promise/: __init__.py
pasync/runner/: __init__.py
pasync/utils/: sleep.py
src/: __init__.py  promise.py
src/runner/: __init__.py
tests/: test_blocking_event_loop.py  test_non_blocking_event_loop.py  test_promise.py
